--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bootstrap": "^3.3.1",
     "code": "^1.2.0",
     "cookie": "^0.1.2",
+    "del": "^1.1.1",
     "flux": "^2.0.1",
     "flux-constant": "^1.0.0",
     "flux-dispatcher": "^1.0.5",
@@ -56,7 +57,6 @@
     "gulp-newer": "^0.5.0",
     "gulp-nodemon": "^1.0.4",
     "gulp-rename": "^1.2.0",
-    "gulp-rimraf": "^0.1.1",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-util": "^3.0.1",
     "jsdom": "^3.1.1",
