--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "test": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/",
     "test-client": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js",
     "test-server": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/misc/ ./test/server/",
-    "test-cover": "lab -t 100 -S -T ./test/transform.js -r html -o ./test/artifacts/coverage.html ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/ && open ./test/artifacts/coverage.html"
+    "test-cover": "lab -t 100 -S -T ./test/transform.js -r html -o ./test/artifacts/coverage.html ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/ && open ./test/artifacts/coverage.html",
+    "update": "david update"
   },
   "author": "Reza Akhavan <jedireza@gmail.com> (http://reza.akhavan.me/)",
   "license": "MIT",
   "dependencies": {
-    "async": "^0.9.x",
+    "async": "^1.x.x",
     "bcrypt": "^0.8.x",
     "boom": "^2.x.x",
-    "classnames": "^1.x.x",
+    "classnames": "^2.x.x",
     "confidence": "^1.x.x",
     "crumb": "^4.x.x",
     "glue": "^2.x.x",
     "handlebars": "^3.x.x",
     "hapi": "^8.x.x",
     "hapi-auth-basic": "^2.x.x",
-    "hapi-auth-cookie": "^2.x.x",
+    "hapi-auth-cookie": "^3.x.x",
     "hapi-mongo-models": "^2.x.x",
     "hapi-react-views": "^3.x.x",
     "hoek": "^2.x.x",
@@ -34,7 +35,7 @@
     "node-uuid": "^1.x.x",
     "nodemailer": "^1.x.x",
     "nodemailer-markdown": "^1.x.x",
-    "object-assign": "^2.x.x",
+    "object-assign": "^3.x.x",
     "react": "^0.13.x",
     "slug": "^0.9.x",
     "visionary": "^2.x.x"
@@ -45,6 +46,7 @@
     "bootstrap": "^3.x.x",
     "code": "^1.x.x",
     "cookie": "^0.1.x",
+    "david": "^6.x.x",
     "del": "^1.x.x",
     "flux": "^2.x.x",
     "flux-constant": "^1.x.x",
@@ -67,7 +69,7 @@
     "nodemon": "^1.x.x",
     "promptly": "^0.2.x",
     "proxyquire": "^1.x.x",
-    "qs": "^2.x.x",
+    "qs": "^4.x.x",
     "react-router": "^0.13.x",
     "require-dir": "^0.3.x",
     "webpack": "^1.x.x",
