replaced 'no-space-before-semi' with 'semi-spacing' and 'no-comma-dangle' with 'comma-dangle' in .eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
         "no-array-constructor": 2,
         "no-new-object": 2,
         "no-spaced-func": 2,
-        "no-space-before-semi": 2,
+        "semi-spacing": 2,
         "no-mixed-spaces-and-tabs": 2,
         "space-after-keywords": 2,
         "semi": [2, "always"],
@@ -64,7 +64,7 @@
         "no-else-return": 2,
         "no-return-assign": 2,
         "no-new-wrappers": 2,
-        "no-comma-dangle": 2,
+        "comma-dangle": 2,
         "no-sparse-arrays": 2,
         "no-ex-assign": 2,
         "indent": [2, 4],
