--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,16 @@ node_js:
   - "0.10"
   - "0.11"
   - "0.12"
+  - "4"
+  - "5"
 services:
   - mongodb
 env:
   - NODE_ENV=test
+
 before_script:
-  - npm run setup
+  npm run setup
+
+cache:
+  directories:
+    node_modules
