--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "author": "Reza Akhavan <jedireza@gmail.com> (http://reza.akhavan.me/)",
   "license": "MIT",
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "dependencies": {
     "async": "^1.x.x",
     "bcrypt": "^0.8.x",
