--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "gulp-sourcemaps": "^1.x.x",
     "gulp-util": "^3.x.x",
     "jsdom": "^3.x.x",
-    "lab": "^5.x.x",
+    "lab": "^8.0.0",
     "lodash": "^3.x.x",
     "merge-stream": "^0.1.x",
     "moment": "^2.x.x",
