Extract config in package.json

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "setup": "./setup.js",
     "start": "gulp",
-    "test": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/",
-    "test-client": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/client-before.js ./test/client/ ./test/client-after.js",
-    "test-server": "lab -t 100 -S -T ./test/transform.js -L --lint-options '{\"extensions\":[\".js\",\".jsx\"]}' ./test/misc/ ./test/server/",
-    "test-cover": "lab -t 100 -S -T ./test/transform.js -r html -o ./test/artifacts/coverage.html ./test/client-before.js ./test/client/ ./test/client-after.js ./test/misc/ ./test/server/ && open ./test/artifacts/coverage.html",
+    "test": "lab -t 100 -S  -L $npm_package_config_transformer_option $npm_package_config_lint_option $npm_package_config_server_tests $npm_package_config_client_tests",
+    "test-client": "lab -t 100 -S $npm_package_config_transformer_option -L $npm_package_config_lint_option $npm_package_config_server_tests",
+    "test-server": "lab -t 100 -S $npm_package_config_transformer_option -L $npm_package_config_lint_option' $npm_package_config_client_tests",
+    "test-cover": "lab -t 100 -S $npm_package_config_transformer_option -r html -o ./test/artifacts/coverage.html $npm_package_config_client_tests $npm_package_config_server_tests && open ./test/artifacts/coverage.html",
     "update": "david update"
   },
   "author": "Reza Akhavan <jedireza@gmail.com> (http://reza.akhavan.me/)",
@@ -17,6 +17,12 @@
   "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
+  },
+  "config": {
+    "transformer_option": "-T ./test/transform.js",
+    "lint_option": "--lint-options {\"extensions\":[\".js\",\".jsx\"]}",
+    "server_tests": "./test/misc/ ./test/server/",
+    "client_tests": "./test/client-before.js ./test/client/ ./test/client-after.js"
   },
   "dependencies": {
     "async": "^1.x.x",
