--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "nodemailer": "1.x.x",
     "nodemailer-markdown": "1.x.x",
     "object-assign": "4.x.x",
-    "react": "0.14.x",
+    "react": "^0.14.x",
+    "react-dom": "^0.14.8",
     "slug": "0.9.x",
-    "visionary": "4.x.x"
+    "vision": "^4.1.0",
+    "visionary": "^4.x.x"
   },
   "devDependencies": {
     "babel-core": "6.x.x",
@@ -52,7 +54,7 @@
     "code": "2.x.x",
     "cookie": "0.2.x",
     "del": "2.x.x",
-    "eslint-plugin-hapi": "4.x.x",
+    "eslint-plugin-hapi": "^4.x.x",
     "flux": "2.x.x",
     "flux-constant": "1.x.x",
     "flux-dispatcher": "1.x.x",
@@ -79,8 +81,8 @@
     "qs": "6.x.x",
     "react-addons-linked-state-mixin": "0.14.x",
     "react-addons-test-utils": "0.14.3",
-    "react-dom": "0.14.x",
-    "react-router": "1.x.x",
+    "react-dom": "^0.14.x",
+    "react-router": "^1.x.x",
     "require-dir": "0.3.x",
     "webpack": "1.x.x",
     "xhr": "2.x.x"
