updated package and build scripts

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "async": "1.x.x",
-    "bcrypt": "0.8.x",
+    "bcrypt": "^0.8.x",
     "boom": "3.x.x",
     "classnames": "2.x.x",
     "confidence": "1.x.x",
