pin some deps for david badges

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "inert": "4.x.x",
     "joi": "9.x.x",
     "mongodb": "2.x.x",
-    "node-uuid": "1.x.x",
+    "node-uuid": "1.4.7",
     "nodemailer": "2.x.x",
     "nodemailer-markdown": "1.x.x",
     "object-assign": "4.x.x",
@@ -70,7 +70,7 @@
     "lab": "11.x.x",
     "lodash": "4.x.x",
     "merge-stream": "1.x.x",
-    "moment": "2.x.x",
+    "moment": "2.14.x",
     "nodemon": "1.x.x",
     "opn": "4.x.x",
     "promptly": "2.x.x",
