--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aqua-pages",
+  "name": "aqua-landing-page",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -8,13 +8,14 @@
     "font-awesome": "^4.2.0",
     "gulp": "^3.8.8",
     "gulp-concat": "^2.4.1",
-    "gulp-jade": "^0.8.0",
-    "gulp-less": "^1.3.6",
-    "gulp-uglify": "^1.0.1",
-    "jquery": "^2.1.1"
+    "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.1.0",
+    "gulp-uglify": "^2.0.0",
+    "http-server": "^0.9.0",
+    "jquery": "^3.1.0"
   },
-  "devDependencies": {},
   "scripts": {
+    "start": "http-server . & gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/jedireza/aqua/issues"
   },
-  "homepage": "https://github.com/jedireza/aqua"
+  "homepage": "https://github.com/jedireza/aqua",
+  "devDependencies": {
+    "http-server": "^0.9.0"
+  }
 }
