--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-less": "^3.1.0",
     "gulp-uglify": "^2.0.0",
     "http-server": "^0.9.0",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "merge-stream": "1.x.x"
   },
   "scripts": {
     "start": "http-server . & gulp",
