mongo-models upgrades

--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "handlebars": "4.x.x",
     "hapi": "15.x.x",
     "hapi-auth-cookie": "6.x.x",
-    "hapi-mongo-models": "5.x.x",
+    "hapi-mongo-models": "6.x.x",
     "hapi-react-views": "9.x.x",
     "hoek": "4.x.x",
     "inert": "4.x.x",
     "joi": "9.x.x",
+    "mongo-models": "1.x.x",
     "mongodb": "2.x.x",
     "node-uuid": "1.4.7",
     "nodemailer": "2.x.x",
@@ -72,7 +73,7 @@
     "lab": "11.x.x",
     "lodash": "4.x.x",
     "merge-stream": "1.x.x",
-    "moment": "2.14.x",
+    "moment": "2.15.x",
     "nodemon": "1.x.x",
     "opn": "4.x.x",
     "promptly": "2.x.x",
