add vs code debug attach, env config optimize

--- a/.env-sample
+++ b/.env-sample
@@ -1,1 +1,7 @@
+INSPECTER=false
+DEBUGGER=true
+NODE_ENV=production
+MONGODB_URI=mongodb://localhost:27017/aqua
+PORT=8000
+COOKIE_SECRET=secret
 SMTP_PASSWORD=secret
