env sample improve

--- a/.env-sample
+++ b/.env-sample
@@ -1,7 +1,8 @@
 INSPECTER=false
-DEBUGGER=true
+DEBUGGER=false
 NODE_ENV=production
-MONGODB_URI=mongodb://localhost:27017/aqua
+URL=http://127.0.0.1:8000
 PORT=8000
-COOKIE_SECRET=secret
+MONGODB_URI=mongodb://mongodb-01:27017,mongodb-02:27017/aqua?replicaSet=rs0
+COOKIE_SECRET=asdefvxdhfaskkfsdfdsfea
 SMTP_PASSWORD=secret
