COOKIE_SECRET length fix in .env-sample

--- a/.env-sample
+++ b/.env-sample
@@ -4,5 +4,5 @@ NODE_ENV=production
 URL=http://127.0.0.1:8000
 PORT=8000
 MONGODB_URI=mongodb://mongodb-01:27017,mongodb-02:27017/aqua?replicaSet=rs0
-COOKIE_SECRET=asdefvxdhfaskkfsdfdsfea
+COOKIE_SECRET=!k3yb04rdK4tz~4qu4~k3yb04rdd0gz!
 SMTP_PASSWORD=secret
