--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   },
   "dependencies": {
     "async": "2.x.x",
-    "bcrypt": "0.8.x",
+    "bcrypt": "1.x.x",
     "boom": "4.x.x",
     "classnames": "2.x.x",
     "confidence": "3.x.x",
     "crumb": "6.x.x",
-    "dotenv": "2.x.x",
+    "dotenv": "4.x.x",
     "escape-string-regexp": "1.x.x",
     "glue": "4.x.x",
     "handlebars": "4.x.x",
-    "hapi": "15.x.x",
-    "hapi-auth-cookie": "6.x.x",
+    "hapi": "16.x.x",
+    "hapi-auth-cookie": "7.x.x",
     "hapi-mongo-models": "6.x.x",
     "hapi-react-views": "9.x.x",
     "hoek": "4.x.x",
     "inert": "4.x.x",
-    "joi": "9.x.x",
+    "joi": "10.x.x",
     "mongo-models": "1.x.x",
     "mongodb": "2.x.x",
-    "node-uuid": "1.4.7",
-    "nodemailer": "2.x.x",
+    "uuid": "3.x.x",
+    "nodemailer": "3.x.x",
     "nodemailer-markdown": "1.x.x",
     "object-assign": "4.x.x",
     "react": "15.x.x",
@@ -52,12 +52,12 @@
     "babel-preset-es2015": "6.x.x",
     "babel-preset-react": "6.x.x",
     "bootstrap": "3.x.x",
-    "code": "3.x.x",
+    "code": "4.x.x",
     "cookie": "0.3.x",
     "del": "2.x.x",
     "eslint-config-hapi": "10.x.x",
     "eslint-plugin-react": "6.x.x",
-    "flux": "2.x.x",
+    "flux": "3.x.x",
     "flux-constant": "1.x.x",
     "font-awesome": "4.x.x",
     "gulp": "3.x.x",
@@ -66,13 +66,13 @@
     "gulp-newer": "1.x.x",
     "gulp-nodemon": "2.x.x",
     "gulp-rename": "1.x.x",
-    "gulp-sourcemaps": "1.x.x",
+    "gulp-sourcemaps": "2.x.x",
     "gulp-util": "3.x.x",
     "jsdom": "9.x.x",
-    "lab": "11.x.x",
+    "lab": "13.x.x",
     "lodash": "4.x.x",
     "merge-stream": "1.x.x",
-    "moment": "2.15.x",
+    "moment": "2.18.x",
     "nodemon": "1.x.x",
     "promptly": "2.x.x",
     "proxyquire": "1.x.x",
